<resources>
    <string name="app_name">My Karibe Vendor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="order_list">All orders</string>
    <string name="no_order_available">No order available</string>
    <string name="no_data_found"><![CDATA[No %1$s found for<font color=#232323>&#160;%2$s</font>]]></string>
    <string name="oder_name"><![CDATA[<b> %1$s </b> by <font color=#84cff9>%2$s</font> </br> <font color=#84cff9>%3$s</font>]]></string>
    <string name="ship_to"><![CDATA[<font color=#84cff9>%1$s</font> <font color=#ffc8c8c8></br>Via %2$s</font>]]></string>
    <string name="total"><![CDATA[<font color=#84cff9>%1$s</font>  <font color=#ffc8c8c8></br>Via %2$s</font>]]></string>
    <string name="scan_barcode_for_reciept">Scan Barcode for Reciept</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="check_order_list">Check Order List</string>
    <string name="order_list_menu">Order List</string>
    <string name="home_page">Home page</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="scan_success_title"><![CDATA[<b>Scan Successfully!</b>]]></string>
    <string name="scan_unsuccess_title"><![CDATA[<b>Invalid Barcode!</b>]]></string>
    <string name="scan_success_msg"><![CDATA[Order status is <b>"Completed"</b> now]]></string>
    <string name="scan_unsuccess_msg">Not getting valid order</string>
    <string name="order_number"><![CDATA[Order: <font color=#3ebfab>%1$s</font>]]></string>
    <string name="login">Log In</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="faile_login">Failed to login</string>
    <string name="failed_product">Failed to fetch product list</string>
</resources>
