<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/scan_barcode"
            android:icon="@drawable/barcode"
            android:title="@string/scan_barcode" />
        <item
            android:id="@+id/order_list"
            android:icon="@drawable/order_menu"
            android:title="@string/order_list" />
        <item
            android:id="@+id/d"
            android:title="" />
        <item
            android:id="@+id/e"
            android:title="" />
        <item
            android:id="@+id/f"
            android:title="" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />

    </group>
</menu>
