<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/main_logo"
                android:layout_marginTop="40dp">

            </RelativeLayout>


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="70dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/user_icon"
                        android:tint="@color/white" />

                    <ImageView
                        android:layout_width="2dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/white_line_vertical" />

                    <EditText
                        android:id="@+id/user_name_txt"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/transparent"
                        android:gravity="center_vertical"
                        android:hint="@string/username"
                        android:textColor="@color/white"
                        android:textColorHint="@color/order_cell_txt" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_line">

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <ImageView
                        android:id="@+id/key_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/password"
                        android:layout_centerVertical="true"
                        android:tint="@color/white" />

                    <ImageView
                        android:id="@+id/line_img"
                        android:layout_toRightOf="@+id/key_img"
                        android:layout_width="2dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/white_line_vertical" />


                    <EditText
                        android:id="@+id/password_txt"
                        android:layout_toRightOf="@+id/line_img"
                        android:layout_width="match_parent"
                        android:layout_toLeftOf="@+id/password_hide_show"
                        android:layout_height="40dp"
                        android:background="@color/transparent"
                        android:gravity="center_vertical"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:layout_centerVertical="true"
                        android:textColorHint="@color/order_cell_txt" />
                    <ImageView
                        android:id="@+id/password_hide_show"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/password_show" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_line">

                </LinearLayout>


            </LinearLayout>
            <ProgressBar
                android:id="@+id/progress_bar"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible" />
            <Button
                android:id="@+id/login_btn"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/login_btn_background"
                android:gravity="center"
                android:text="@string/login"
                android:layout_marginBottom="30dp"
                android:textColor="@color/white" />




        </LinearLayout>
    </ScrollView>

</RelativeLayout>